<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_waiter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.codetribe.dineinstyle.AddWaiter">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_waiter_info"
        android:layout_gravity="center"
        android:fontFamily="cursive"
        android:textSize="32sp"
        android:textAlignment="center" />



    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/com_facebook_profile_picture_blank_square"
        android:id="@+id/set_waiter_pic"
        android:layout_marginTop="30dp"
        android:layout_gravity="center">

    </de.hdodenhof.circleimageview.CircleImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Click to upload picture"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/provide_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_name"
                android:inputType="textPersonName"
                android:maxLines="1" />


            <EditText
                android:id="@+id/provide_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_surname"
                android:inputType="textPersonName"
                android:maxLines="1" />


            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp" >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/male_gender"
                    android:onClick="generateWaiterGender"
                    android:paddingLeft="10dp"
                    android:layout_marginRight="30dp"
                    android:textColor="@color/colorPrimary"
                    android:text="Male"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/female_gender"
                    android:onClick="generateWaiterGender"
                    android:paddingLeft="10dp"
                    android:textColor="@color/colorPrimary"
                    android:text="Female"/>
            </RadioGroup>

            <Button
                android:id="@+id/select_dob"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/select_date_of_birth"
                style="?android:textAppearanceSmall"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/buttons_background"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/dob_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_of_birth"
                    android:layout_marginRight="100dp"
                    android:maxLines="1"/>

                <EditText
                    android:id="@+id/age_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/age"
                    android:maxLines="1"/>

            </LinearLayout>

            <EditText
                android:id="@+id/provide_experience"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_experience"
                android:inputType="textPersonName"
                android:maxLines="1" />



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/tan_background"
                android:layout_gravity="center_horizontal">


                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:background="@color/tan_background"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/tan_background"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:password="false"
                    android:background="@color/tan_background"/>

            </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/add_new_waiter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish_setup"
        style="?android:textAppearanceSmall"
        android:textStyle="bold"
        android:layout_marginTop="26dp"
        android:background="@color/buttons_background"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>